--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,10 @@ html {
   margin-left: auto;
   margin-right: auto;
 }
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
 
 body {
   font-family: var(--main-font);
@@ -46,6 +50,12 @@ body {
 
 .link {
   text-decoration: none;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 /* header */
@@ -138,6 +148,8 @@ body {
   /* display: inline-block; */
   background-color: var(--primary-dark-bg);
   text-align: center;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
 
 .hero-title {
@@ -158,7 +170,6 @@ body {
   border-radius: 4px;
   border: 1px solid transparent;
   margin-top: 0;
-  margin-bottom: 200;
   max-width: 200;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
@@ -176,11 +187,6 @@ body {
 }
 
 /* Competence */
-.competence {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .competence-list {
   display: flex;
 }
@@ -208,7 +214,7 @@ body {
 
 /* Affairs */
 .affairs {
-  padding-bottom: 94px;
+  padding-top: 0;
 }
 
 .container-affairs {
@@ -233,9 +239,6 @@ body {
 
 /* Team-personalities */
 .team {
-  padding-top: 94px;
-  padding-bottom: 94px;
-
   background-color: var(--team-bg);
 }
 
@@ -338,6 +341,8 @@ body {
 /* Filters */
 .filters-list {
   display: flex;
+  margin-bottom: 50px;
+  justify-content: center;
 }
 
 .filters-item:not(:last-child) {
@@ -368,22 +373,30 @@ body {
   background: var(--accent-bg-cl);
 }
 
-.portfolio-list {
+.portfolio-card-set {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 50px;
-  padding-bottom: 94px;
+  flex-basis: calc(100% / 3 - 30px);
+}
+
+.card-thumb {
+  outline: 1px solid #eeeeee;
+}
+
+.card-content {
+  padding: 20px 24px;
 }
 
 .portfolio-item {
   margin-right: 30px;
   margin-bottom: 30px;
 
+  box-sizing: border-box;
   width: 370px;
   height: 404px;
-  background-color: var(--secondary-light-bg);
+
   border: 1px solid #eeeeee;
-  box-sizing: border-box;
+  background-color: var(--secondary-light-bg);
 }
 
 .portfolio-item:nth-child(3n) {
@@ -395,7 +408,7 @@ body {
 }
 
 .portfolio-item-title {
-  margin: 20px 24px 4px 24px;
+  margin: 0 0 4px 0;
 
   font-weight: 700;
   font-size: 18px;
@@ -405,7 +418,7 @@ body {
 }
 
 .portfolio-item-txt {
-  margin: 0 24px 15px 24px;
+  margin: 0;
 
   font-size: 16px;
   line-height: 1.87;
@@ -414,7 +427,5 @@ body {
 }
 
 /* 
-#EEEEEE
 #000000
-#2F303A
 #ECECEC */
