--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ html {
 }
 
 .container {
-  width: 1230px;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
@@ -71,6 +71,7 @@ img {
 .header-link {
   padding-top: 24px;
   padding-bottom: 25px;
+  margin-right: 93px;
 
   font-family: var(--secondary-font);
   font-weight: 700;
@@ -97,9 +98,6 @@ img {
 
 .nav-list {
   display: flex;
-  margin-left: 93px;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .nav-item:not(:last-child) {
@@ -108,6 +106,8 @@ img {
 
 .nav-link {
   display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   font-weight: 500;
   font-size: 14px;
@@ -120,8 +120,6 @@ img {
 .contacts-list {
   display: flex;
   margin-left: auto;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .contacts-item:not(:last-child) {
@@ -135,6 +133,8 @@ img {
 
 .contacts-phone {
   display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
   font-weight: 500;
   font-size: 14px;
@@ -153,9 +153,8 @@ img {
 }
 
 .hero-title {
-  vertical-align: middle;
   margin-top: 0;
-  margin-bottom: 40;
+  margin-bottom: 30px;
 
   font-weight: 900;
   font-size: 44px;
@@ -191,6 +190,10 @@ img {
   display: flex;
 }
 
+.competence-item {
+  width: 270px;
+}
+
 .competence-item:not(:last-child) {
   margin-right: 30px;
 }
@@ -217,7 +220,7 @@ img {
   padding-top: 0;
 }
 
-.container-affairs {
+.affairs-list {
   display: flex;
 }
 
@@ -261,7 +264,6 @@ img {
 .team-item {
   background-color: var(--secondary-light-bg);
   width: 270px;
-  height: 368px;
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -272,8 +274,13 @@ img {
   margin-left: 30px;
 }
 
+.card-team-content {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .team-item-title {
-  margin-top: 30px;
+  margin-top: 0;
   margin-bottom: 10px;
 
   font-weight: 500;
@@ -286,7 +293,7 @@ img {
 
 .team-item-txt {
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0;
 
   font-size: 16px;
   line-height: 1.19;
@@ -298,15 +305,15 @@ img {
 /* Footer */
 .footer {
   background-color: var(--primary-dark-bg);
-}
-
-.container-footer {
   padding-top: 60px;
   padding-bottom: 60px;
 }
 
 .footer-link {
+  display: block;
+  max-width: 145px;
   margin-top: 0;
+  margin-right: 0;
   margin-bottom: 20px;
   padding: 0;
 }
@@ -318,6 +325,11 @@ img {
 /* Address */
 .address {
   font-style: normal;
+  max-width: 231px;
+}
+
+.address-item:not(:last-child) {
+  margin-bottom: 9px;
 }
 
 .address-link:hover,
@@ -337,6 +349,10 @@ img {
 }
 
 /* Вторая страничка макета - ПОРТФОЛИО */
+
+.portfolio-header {
+  border-bottom: 1px solid #ececec;
+}
 
 /* Filters */
 .filters-list {
@@ -379,23 +395,18 @@ img {
   flex-basis: calc(100% / 3 - 30px);
 }
 
-.card-thumb {
-  outline: 1px solid #eeeeee;
-}
-
 .card-content {
   padding: 20px 24px;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
 }
 
 .portfolio-item {
   margin-right: 30px;
   margin-bottom: 30px;
-
-  box-sizing: border-box;
   width: 370px;
-  height: 404px;
 
-  border: 1px solid #eeeeee;
   background-color: var(--secondary-light-bg);
 }
 
@@ -427,5 +438,4 @@ img {
 }
 
 /* 
-#000000
-#ECECEC */
+#000000*/
